--- a/views/index.html
+++ b/views/index.html
@@ -19,14 +19,17 @@
             <div class="row">
                 <div class="col-xs-4 hotels choose">
                     <h4>Hotels</h4>
+                    <button id="add-hotel" class="btn btn-default act">Add</button>
                     <!-- activitySelectView -->
 				</div>
 				<div class="col-xs-4 thingsToDo choose">
                     <h4>Things To Do</h4>
+                    <button id="add-thing" class="btn btn-default act">Add</button>
                     <!-- activitySelectView -->
 				</div>
 				<div class="col-xs-4 restaurants choose">
                     <h4>Restaurants</h4>
+                    <button id="add-restaurant" class="btn btn-default act">Add</button>
                     <!-- activitySelectView -->
 				</div>
             </div>
