drop downs working

--- a/views/layout.html
+++ b/views/layout.html
@@ -25,11 +25,14 @@
 <script src='/javascripts/day.collection.js'></script>
 <script src='/javascripts/activity.model.js'></script>
 <script src='/javascripts/activity.collection.js'></script>
+<script src='/javascripts/activityselect.view.js'></script>
+<script src='/javascripts/activityoption.view.js'></script>
 <script src='/javascripts/trip.model.js'></script>
 <script src='/javascripts/dayButton.view.js'></script>
 <script src='/javascripts/trip.view.js'></script>
+<script src = '/javascripts/hotel.model.js'></script>
 
-<script src='/javascripts/activityselect.view.js'></script>
+
 
 <script src="/javascripts/main.js"></script>
 
