--- a/views/partials/templates.html
+++ b/views/partials/templates.html
@@ -38,7 +38,7 @@
 
 <!-- activity option template -->
 <script type="text/template" id="option_template">
-	<li><a tabindex="-1" href="#"><%= name %></a></li>
+	<li><a tabindex="-1" href="#"><%= name %></a>test</li>
 </script>
 
 <!-- day button template -->
