--- a/views/index.html
+++ b/views/index.html
@@ -17,19 +17,19 @@
         </div>
         <div class="col-xs-9">
             <div class="row">
-                <div class="col-xs-4 hotels choose">
+                <div class="col-xs-4 hotels choose" id = 'hid'>
                     <h4>Hotels</h4>
-                    <button id="add-hotel" class="btn btn-default act">Add</button>
+                    
                     <!-- activitySelectView -->
 				</div>
-				<div class="col-xs-4 thingsToDo choose">
+				<div class="col-xs-4 thingsToDo choose" id = 'tid'>
                     <h4>Things To Do</h4>
-                    <button id="add-thing" class="btn btn-default act">Add</button>
+                    
                     <!-- activitySelectView -->
 				</div>
-				<div class="col-xs-4 restaurants choose">
+				<div class="col-xs-4 restaurants choose" id="rid">
                     <h4>Restaurants</h4>
-                    <button id="add-restaurant" class="btn btn-default act">Add</button>
+                    
                     <!-- activitySelectView -->
 				</div>
             </div>
